[package]
name = "showdown"
version = "0.13.0"
authors = ["Konrad Borowski <konrad@borowski.pw>"]
description = "Pokemon Showdown Client"
license = "MIT/Apache-2.0"
repository = "https://gitlab.com/KonradBorowski/showdown"
edition = "2018"

[dependencies]
chrono = { version = "0.4.1", optional = true }
futures-util = { version = "0.3.0", default-features = false, features = [ "sink" ] }
reqwest = { version = "0.11.0", features = [ "json" ] }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
tokio = "1.0.1"
tokio-native-tls = "0.3.0"
tokio-tungstenite = { version = "0.13.0", features = [ "tls" ] }
url = "2.1.0"

[dev-dependencies]
chrono = "0.4.1"
comparator = "0.2.0"
futures = "0.3.0"
rand = "0.8.1"
tokio = { version = "1.0.1", features = [ "macros", "rt-multi-thread" ] }

[package.metadata.docs.rs]
all-features = true
