[package]
name = "showdown"
version = "0.19.0"
authors = ["Konrad Borowski <konrad@borowski.pw>"]
description = "Pokemon Showdown Client"
license = "MIT/Apache-2.0"
repository = "https://gitlab.com/KonradBorowski/showdown"
edition = "2018"

[features]
default = ["native-tls"]
native-tls = ["__tls", "reqwest/native-tls", "tokio-tungstenite/native-tls"]
native-tls-vendored = ["__tls", "reqwest/native-tls-vendored", "tokio-tungstenite/native-tls-vendored"]
rustls-tls-webpki-roots = ["__tls", "reqwest/rustls-tls-webpki-roots", "tokio-tungstenite/rustls-tls"]
# Internal feature, do not use
__tls = ["reqwest"]

[dependencies]
chrono = { version = "0.4.1", optional = true }
futures-util = { version = "0.3.0", default-features = false, features = [ "sink" ] }
reqwest = { version = "0.11.0", default-features = false, features = [ "json" ], optional = true }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
thiserror = "1.0.29"
tokio = "1.0.1"
tokio-tungstenite = "0.15.0"
url = "2.1.0"

[dev-dependencies]
chrono = "0.4.1"
comparator = "0.2.0"
futures = "0.3.0"
rand = "0.8.1"
tokio = { version = "1.0.1", features = [ "macros", "rt-multi-thread" ] }

[package.metadata.docs.rs]
features = ["chrono"]

[[example]]
name = "responder"
required-features = ["__tls"]

[[example]]
name = "roomlist"
required-features = ["__tls"]
