[package]
name = "showdown"
version = "0.21.0"
authors = ["Konrad Borowski <konrad@borowski.pw>"]
description = "Pokemon Showdown Client"
license = "MIT/Apache-2.0"
repository = "https://gitlab.com/KonradBorowski/showdown"
categories = ["web-programming::http-client", "web-programming::websocket"]
edition = "2018"

[features]
default = ["native-tls"]
native-tls = ["__tls", "reqwest/native-tls", "tokio-tungstenite/native-tls"]
native-tls-vendored = ["__tls", "reqwest/native-tls-vendored", "tokio-tungstenite/native-tls-vendored"]
rustls-tls-native-roots = ["__tls", "reqwest/rustls-tls-native-roots", "tokio-tungstenite/rustls-tls-native-roots"]
rustls-tls-webpki-roots = ["__tls", "reqwest/rustls-tls-webpki-roots", "tokio-tungstenite/rustls-tls-webpki-roots"]
# Internal feature, do not use
__tls = ["reqwest"]

[dependencies]
futures-util = { version = "0.3.0", default-features = false, features = [ "sink" ] }
reqwest = { version = "0.11.0", default-features = false, features = [ "json" ], optional = true }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
thiserror = "1.0.29"
time = { version = "0.3.3", default-features = false, optional = true }
tokio = "1.0.1"
tokio-tungstenite = "0.16.1"
url = "2.1.0"

[dev-dependencies]
comparator = "0.2.0"
futures = "0.3.0"
rand = "0.8.1"
time = { version = "0.3.3", features = [ "macros" ] }
tokio = { version = "1.0.1", features = [ "macros", "rt-multi-thread" ] }

[package.metadata.docs.rs]
features = ["time"]

[[example]]
name = "responder"
required-features = ["__tls"]

[[example]]
name = "roomlist"
required-features = ["__tls"]
